# train-tickets

./: .gitignore  CLAUDE.md  README.md  config.example.json  pyproject.toml  tickets.py  tunbridge-wells.local
commands/: record.py  refresh.py  search.py  setup.py  view.py
core/: client.py  config.py  dates.py  directions.py  fares.py  storage.py
tests/: test_client.py  test_config.py  test_dates.py  test_directions.py  test_fares.py  test_record.py  test_refresh.py  test_search.py  test_setup.py  test_storage.py  test_structure.py  test_view.py
tests/fixtures/: journey-detail-sample.json  journey-plan-sample.json
